Fixed #1174 - Dialog header not visible

--- a/src/components/dialog/Dialog.css
+++ b/src/components/dialog/Dialog.css
@@ -17,11 +17,12 @@
     pointer-events: auto;
 }
 .p-dialog {
+    display: flex;
+    flex-direction: column;
     padding: 0;
     pointer-events: auto;
     max-height: 90%;
     margin: 5% auto;
-    overflow-y: auto;
 }
 .p-dialog .p-dialog-titlebar {
 	padding: .5em .75em;
@@ -34,6 +35,7 @@
     padding: .5em .75em;
     background: none;
     zoom: 1;
+    overflow-y: auto;
 }
 .p-dialog-resizable .p-dialog-content {
     overflow: auto;
